--- a/resource/localization/zh-CN/mapsweepers.properties
+++ b/resource/localization/zh-CN/mapsweepers.properties
@@ -66,11 +66,11 @@ jcms.obj_mainframeterminals1=Hack Terminals (Zombies)
 jcms.obj_mainframeterminals2=Hack Terminals (Shield-Charger)
 jcms.obj_mainframeterminals3=Hack Terminals (Orbital Bombardment)
 
-jcms.restock=Ammo Restock
+jcms.restock=弹药补给
 jcms.restock_desc=Drops a crate that gives you every ammo type you need. You get roughly 400 J worth of ammo in total
 jcms.turret_smg=SMG Turret
 jcms.turret_smg_desc=Constant gunfire against weak enemies
-jcms.firstaid=First Aid Drop
+jcms.firstaid=医疗箱
 jcms.firstaid_desc=Drops a crate that restores 25 HP per use, up to 100 HP total
 jcms.jumppad=Jump Pad
 jcms.jumppad_desc=Places down a pad that boosts your jumping height. Protects against fall damage
@@ -80,7 +80,7 @@ jcms.turret_shotgun=Scattergun Turret
 jcms.turret_shotgun_desc=Fires in a wide arc and decimates everyone up-close
 jcms.shelling=Shelling
 jcms.shelling_desc=Orbital bombing affecting a big area for 1 minute
-jcms.mine_breach=Breaching Charge
+jcms.mine_breach=突破冲锋(Breaching Charge)
 jcms.mine_breach_desc=Punches out locked doors. VERY STRONG knockback on anything else you attach this to
 jcms.turret_bolter=Bolter Turret
 jcms.turret_bolter_desc=Slowly fires powerful and accurate bolts
@@ -100,12 +100,12 @@ jcms.tesla=Tesla Coil
 jcms.tesla_desc=Fires electricity that arcs through multiple targets
 jcms.mine_multiblast=MultiBlast Mine
 jcms.mine_multiblast_desc=A low-range mine that can explode 4 times before disappearing
-jcms.carpetbombing=Carpet Bombing
+jcms.carpetbombing=地毯式轰炸
 jcms.carpetbombing_desc=Drops many weak, inaccurate bombs along a straight path
 jcms.antiairmissile=Anti-Air Missile
 jcms.antiairmissile_desc=A missile that follows and detonates next to flying NPCs, such as Gunships or Helicopters
-jcms.orbitalbeam=Orbital Beam
-jcms.orbitalbeam_desc=Shoots down a powerful, target-seeking laser beam that obliterates everything
+jcms.orbitalbeam=轨道激光
+jcms.orbitalbeam_desc=发射一束强大的、自动寻敌的激光束，摧毁一切
 jcms.vtol=Dropship
 jcms.vtol_desc=DS-2 VTOL with 6 passenger seats for fast transportation around the area
 jcms.turret_gatling=Gatling Turret
@@ -170,9 +170,9 @@ jcms.combine=The Combine
 jcms.everyone=Everyone
 jcms.rebel=Rebels
 
-jcms.solo=Solo Mission
+jcms.solo=单人任务
 jcms.npcshud=NPCs:
-jcms.pod_text=- J CORP SWEEPER INITIATIVE -
+jcms.pod_text=- J 公司清除计划 -
 jcms.locator_scanning=SCANNING AREA
 jcms.evac_title1=CHARGING %d%%
 jcms.evac_title2=NOT CHARGING
@@ -222,10 +222,10 @@ jcms.loadout_tip=These are your weapons. Click on one to sell it. You also get a
 jcms.shop=WEAPON SHOP
 jcms.shop_locator=Shop
 jcms.shop_tip=Click on a weapon to buy it. Click again to buy extra ammo for it. Right click to mark/unmark as favourite.
-jcms.mission=MISSION
-jcms.information=INFORMATION
-jcms.options=OPTIONS
-jcms.mystats=MY STATS
+jcms.mission=任务
+jcms.information=关于
+jcms.options=设置
+jcms.mystats=我的统计数据
 jcms.ourdiscord=Our Discord
 jcms.ourdiscord_specify=Our GMod Addons Discord
 jcms.supportus=Support us
@@ -270,7 +270,7 @@ jcms.tutorialpost_desc3=A map needs to have a NODEGRAPH and a NAVMESH to work.
 jcms.tutorialpost_desc4=They're hard to find, but we have a Steam collection ready for you:
 jcms.tutorialpost_disconnect=Return to Menu
 
-jcms.ominoustext1== J CORP. TEMPORARY-DEATH REPORT #UINT128_OVERFLOW =
+jcms.ominoustext1== J 公司. 临时死亡报告 #UINT128_OVERFLOW =
 jcms.ominoustext2=Most recent corpus located
 jcms.ominoustext3=Teleportation tightbeam OK
 jcms.ominoustext4=Preparing respawn procedures
@@ -278,22 +278,21 @@ jcms.ominoustext5=Charging extra taxes for death and failure
 jcms.ominoustext6=Preparing cleanse-nuking of the map
 jcms.ominoustext7=J Corp thanks you for your cooperation.
 
-jcms.joinas_sweeper=Loadout (Join Sweepers)
-jcms.joinas_npc=Join as NPC
-jcms.switchsides=Play as NPCs (for the rest of the mission!)
-jcms.switchsides_evac=Harass survivors as an NPC
+jcms.joinas_sweeper=装备(加入清道夫)
+jcms.joinas_npc=加入NPC
+jcms.switchsides=游玩NPC (for the rest of the mission!)
+jcms.switchsides_evac=以NPC身份来给幸存者捣乱
 jcms.switchsides_tip=HOLD
-jcms.startmission=Choose Loadout
-jcms.changemission=(ADMIN) Force Change Mission
-jcms.changemission_sp=Change the Mission
-jcms.changemission_vote=Vote for a Different Mission
-jcms.menututor_title=WELCOME!
-jcms.menututor_desc_sp1=Are you new to Map Sweepers?
-jcms.menututor_desc_sp2=We have a tutorial for you.
-jcms.menututor_desc_mp1=Select Map Sweepers gamemode,
-jcms.menututor_desc_mp2=then launch the map 'jcms_tutorial' in
-jcms.menututor_desc_mp3=singleplayer to complete the tutorial.
-jcms.menututor_btn=PLAY THE TUTORIAL
+jcms.startmission=选择装备
+jcms.changemission=(管理员) 强制更改任务
+jcms.changemission_sp=更改任务
+jcms.changemission_vote=投票更改任务
+jcms.menututor_title=欢迎!
+jcms.menututor_desc_sp1=你是第一次玩 Map Sweepers 这个模式吗?
+jcms.menututor_desc_sp2=我们为您准备了一个教程.
+jcms.menututor_desc_mp1=选择 Map Sweepers 游戏模式,
+jcms.menututor_desc_mp2=然后在单人模式下启动地图 'jcms_tutorial'.
+jcms.menututor_btn=游玩教程
 
 jcms.sortby=Sort by
 jcms.sortmode_name=Name
