--- a/resource/localization/zh-CN/mapsweepers.properties
+++ b/resource/localization/zh-CN/mapsweepers.properties
@@ -5,36 +5,37 @@ jcms.title=J CORP MAP SWEEPERS
 jcms.license_notice=Map Sweepers's source code is licensed under the GNU General Public License v3.0. All derived works must also be licensed under the same license. The license's text can be read in the large text field below. What this means, is you can create, host or publish your own versions of Map Sweepers, as long as you keep Octantis Addons (MerekiDor & JonahSoldier) credited, and provide open source code to your version of Map Sweepers, if it's public. Also, we ask you to keep our links (social media and support) in all derived versions of the addon. If you wish to add your own, you may do so, but please keep our original links intact *somewhere*. Majority of assets (all 3D models, voicelines of mission control, and textures for the 3D models) are copyrighted by MerekiDor (contact email: merekidorian@gmail.com) with all rights reserved. These assets may only be used in the context of Map Sweepers. This is a very short version of the terms, you may read the full thing in our GitHub Repository: https://github.com/MerekiDor/mapsweepers
 jcms.license_notice_font=The following license's full text applies to the font which is used in, and distributed with Map Sweepers. The font's name is "IBM Plex Sans", licensed under SIL OPEN FONT LICENSE Version 1.1 by IBM Corp. 
 
-jcms.go=Go there
-jcms.attack=Attack
-jcms.look=Look
-jcms.defend=Defend
+jcms.go=去这里
+jcms.attack=攻击这里
+jcms.look=看这里
+jcms.defend=在这里防御
 
 jcms.shieldregen=Shield Regen: %d/s after %d seconds
 
-jcms.class_recon=Recon
+jcms.class_recon=侦察兵
 jcms.class_recon_special=Mobility & Information
 jcms.class_recon_desc=Double-jumping leaves a weak explosion under your feet.\nYou are immune to fall damage, and you run faster than usual.\nWall-hack for some entities & objectives you discover are marked for allies.\nYou can use all weapons while sprinting.
 
-jcms.class_infantry=Infantry
+jcms.class_infantry=步兵
 jcms.class_infantry_special=Ammo Conservation
 jcms.class_infantry_desc=You deal 25% more damage with weapons.\n50% chance to not consume any ammo. Even grenades.\nIf you really just want to shoot things, this is the option for you.
 
-jcms.class_sentinel=Sentinel
+jcms.class_sentinel=哨兵
 jcms.class_sentinel_special=Bullet Sponge
 jcms.class_sentinel_desc=Incredibly strong shield, which you can charge by killing things.\nYou teleport away randomly when your shield is broken.\nReally slow, but sprint speed increases the longer you run for.
 
-jcms.class_engineer=Engineer
+jcms.class_engineer=工程师
+-- Engineer Gaming(工程师游戏中)这个是TF2社区流行梗,所以无需翻译. 详细信息,请查看TF2 Wiki --
 jcms.class_engineer_special=Engineer Gaming
 jcms.class_engineer_desc=You get a gravity gun to move turrets and objects around with.\nCheaper Orbitals & Explosives.\nLower cooldown on all call-ins.\nAll of your defences are empowered.
 
-jcms.apply=APPLY
-jcms.confirm=CONFIRM
-jcms.cancel=CANCEL
-jcms.remove=REMOVE
-jcms.select=SELECT
-jcms.selected=SELECTED
-jcms.favourites=Favourites
+jcms.apply=应用
+jcms.confirm=确认
+jcms.cancel=取消
+jcms.remove=移除
+jcms.select=选择
+jcms.selected=已选择
+jcms.favourites=收藏
 
 jcms.objective=Objective
 jcms.flashpoint=Flashpoint
@@ -45,92 +46,92 @@ jcms.gotoevac=Objectives complete, go to EVAC
 jcms.evaccharged=EVAC is fully charged, get in!
 
 jcms.obj_flashpoint=Charge Flashpoint
-jcms.obj_jzombie=Shoot Zombies on sight
-jcms.obj_evac=Evacuate
-jcms.obj_evaccharge=Charge EVAC to escape
-jcms.obj_surv=Survive
-jcms.obj_pushpayload=Push the Payload
-jcms.obj_hackcontrolpoint=Hack the Control Point
-jcms.obj_prep=Prepare
-jcms.obj_bringpayload=Bring the Payload to the end
-jcms.obj_die=Accept your fate
-jcms.obj_jrebel=Attack Rebel forces on sight
-jcms.obj_jcombine=Attack Combine forces on sight
-jcms.obj_thumpersabotage=Sabotage thumpers
-jcms.obj_jantlion=Shoot Antlions on sight
-jcms.obj_j=Kill everyone
-jcms.obj_thumperreactivation=Reactivate thumpers
-jcms.obj_armbombs=Arm the Bombs
-jcms.obj_defendbomb=Defend the Bomb
-jcms.obj_mainframeterminals1=Hack Terminals (Zombies)
-jcms.obj_mainframeterminals2=Hack Terminals (Shield-Charger)
-jcms.obj_mainframeterminals3=Hack Terminals (Orbital Bombardment)
+jcms.obj_jzombie=攻击看到的僵尸
+jcms.obj_evac=撤离
+jcms.obj_evaccharge=充能EVAC来撤离
+jcms.obj_surv=活下来
+jcms.obj_pushpayload=推车
+jcms.obj_hackcontrolpoint=入侵控制点
+jcms.obj_prep=准备
+jcms.obj_bringpayload=将车推到终点
+jcms.obj_die=接受你的命运
+jcms.obj_jrebel=攻击看到的反抗军
+jcms.obj_jcombine=攻击看到的联合军
+jcms.obj_thumpersabotage=破坏蚁狮驱逐器
+jcms.obj_jantlion=攻击看到的蚁狮
+jcms.obj_j=杀死所有人
+jcms.obj_thumperreactivation=重新激活蚁狮驱逐器
+jcms.obj_armbombs=引爆炸弹
+jcms.obj_defendbomb=保护炸弹
+jcms.obj_mainframeterminals1=入侵终端 (僵尸)
+jcms.obj_mainframeterminals2=入侵终端 (护盾充能器)
+jcms.obj_mainframeterminals3=入侵终端 (轨道轰炸)
 
 jcms.restock=弹药补给
 jcms.restock_desc=Drops a crate that gives you every ammo type you need. You get roughly 400 J worth of ammo in total
-jcms.turret_smg=SMG Turret
+jcms.turret_smg=SMG炮塔
 jcms.turret_smg_desc=Constant gunfire against weak enemies
 jcms.firstaid=医疗箱
 jcms.firstaid_desc=Drops a crate that restores 25 HP per use, up to 100 HP total
-jcms.jumppad=Jump Pad
+jcms.jumppad=跳跃板
 jcms.jumppad_desc=Places down a pad that boosts your jumping height. Protects against fall damage
-jcms.mine_c4=Timed Explosives
+jcms.mine_c4=定时炸药
 jcms.mine_c4_desc=Huge, powerful explosion 10 seconds after being planted
-jcms.turret_shotgun=Scattergun Turret
+jcms.turret_shotgun=散弹枪炮塔
 jcms.turret_shotgun_desc=Fires in a wide arc and decimates everyone up-close
-jcms.shelling=Shelling
+jcms.shelling=轨道轰炸
 jcms.shelling_desc=Orbital bombing affecting a big area for 1 minute
 jcms.mine_breach=突破冲锋(Breaching Charge)
 jcms.mine_breach_desc=Punches out locked doors. VERY STRONG knockback on anything else you attach this to
-jcms.turret_bolter=Bolter Turret
+jcms.turret_bolter=爆弹炮塔
 jcms.turret_bolter_desc=Slowly fires powerful and accurate bolts
-jcms.i_umbrella=Umbrella
+jcms.i_umbrella=雨伞
 jcms.i_umbrella_desc=Provides cover from the toxic rain
 jcms.ts_sapper=Sapper
 jcms.ts_sapper_desc=Slap this on a thumper and it'll slowly destroy it. Cheaper than C4, if you have time to spare
-jcms.autohacker=Auto-Hack Device
+jcms.autohacker=自动入侵装置
 jcms.autohacker_desc=Attach this to a terminal and protect it from NPCs. In 1 minute the terminal will be hacked
-jcms.locator=Locator
+jcms.locator=定位器
 jcms.locator_desc=Shows distance & compass direction towards the nearest objective. Useful on big maps
-jcms.shieldcharger=Shield Charger
+jcms.shieldcharger=护盾充能器
 jcms.shieldcharger_desc=Charges nearby players' shields at a rate of 5/s. Will eventually run out
-jcms.respawnbeacon=Respawn Beacon
+jcms.respawnbeacon=复活信标
 jcms.respawnbeacon_desc=If someone dies, they will come back on this single-use platform
-jcms.tesla=Tesla Coil
+jcms.tesla=特斯拉线圈
 jcms.tesla_desc=Fires electricity that arcs through multiple targets
 jcms.mine_multiblast=MultiBlast Mine
 jcms.mine_multiblast_desc=A low-range mine that can explode 4 times before disappearing
 jcms.carpetbombing=地毯式轰炸
 jcms.carpetbombing_desc=Drops many weak, inaccurate bombs along a straight path
-jcms.antiairmissile=Anti-Air Missile
+jcms.antiairmissile=防空导弹
 jcms.antiairmissile_desc=A missile that follows and detonates next to flying NPCs, such as Gunships or Helicopters
 jcms.orbitalbeam=轨道激光
 jcms.orbitalbeam_desc=发射一束强大的、自动寻敌的激光束，摧毁一切
-jcms.vtol=Dropship
+jcms.vtol=垂直起降运输机
 jcms.vtol_desc=DS-2 VTOL with 6 passenger seats for fast transportation around the area
-jcms.turret_gatling=Gatling Turret
+jcms.turret_gatling=加特林炮塔
 jcms.turret_gatling_desc=Turns slowly, but provides heavy suppressive fire
-jcms.hovertank=Tank
+jcms.hovertank=坦克
 jcms.hovertank_desc=LHT-6 with dual plasma cannons and micro-missile swarm launchers
-jcms.turret_smrls=Missile Platform
+jcms.turret_smrls=导弹平台
 jcms.turret_smrls_desc=Anti-Air + Mortar, all in one. Attacks everything with homing missiles
 
 jcms.missionunknown=MISSION UNKNOWN
-jcms.payload=Payload
+jcms.payload=推车
 jcms.payload_entity=The Payload
 jcms.payload_desc=Stick close to a platform on rails to move it from point A to point B. Killing enemies next to it will give it a speed boost.
-jcms.thumpersabotage=Thumper Sabotage
-jcms.thumpersabotage_desc=Locate and destroy all thumpers on the map. Antlions will start replacing Combine soldiers as you progress. Explosives are advised.
+jcms.thumpersabotage=破坏蚁狮驱逐器
+jcms.thumpersabotage_desc=找到并摧毁地图上的所有蚁狮驱逐器\n随着你的任务进度蚁狮会开始替换联合军士兵\n然后建议是使用炸药
 jcms.violenceflashpoints=Violence Flashpoints
 jcms.violenceflashpoints_desc=Charge all Flashpoints by killing enough NPCs next to them. A powerful boss will be released afterwards.
-jcms.hell=Hell
-jcms.hell_desc=You have 1 minute to prepare.
-jcms.thumperreactivation=Thumper Reactivation
-jcms.thumperreactivation_desc=Locate and reactivate disabled thumpers in this area to drive antlions out.
-jcms.mainframe=Mainframe
+jcms.hell=地狱
+jcms.hell_desc=你有 1 分钟的准备时间.
+jcms.thumperreactivation=重新激活蚁狮驱逐器
+jcms.thumperreactivation_desc=找到并重新激活已经关闭的蚁狮驱逐器,以驱赶蚁狮.
+jcms.mainframe=主机
 jcms.mainframe_desc=Hack the power lines supplying an RGG Gambling Mainframe with Gambling Energy. Each hacked line will disable part of the Mainframe's defenses, and give you a bonus instead.
-jcms.infestation=Infestation
-jcms.infestation_desc=Polyps have infested this sector. Find & arm nuclear bombs for map cleansing. Protect the bombs until activation, or they will explode prematurely!
+jcms.infestation=感染
+jcms.infestation_desc=Polyps已经入侵该区域\n寻找并启动核弹清理该地图.\n请务必保护核弹直到启动 ,否则会提前引爆 !
 
 jcms.flashpoint_completion=Flashpoint completion: %d%%
 jcms.thumpersabotage_completion=%d%% thumpers destroyed
@@ -149,26 +150,26 @@ jcms.mainframe_completion2=[TRACK 2 COMPLETE] Shield-charger Enabled
 jcms.mainframe_completion3=[TRACK 3 COMPLETE] Orbital Bombardment Initiated
 jcms.mainframe_idiotpov=IDIOT'S POV:
 
-jcms.missiontag_extraorders=Extra Orders
-jcms.missiontag_extraorders_desc=This mission features unique orders you can use to your advantage from the spawnmenu.
-jcms.missiontag_hacking=Hacking is Required
-jcms.missiontag_hacking_desc=This mission has terminals that must be hacked to progress.
-jcms.missiontag_infighting=Infighting
-jcms.missiontag_infighting_desc=Enemies from different factions may attack each other on sight.
-jcms.missiontag_timer=Time Limit
-jcms.missiontag_timer_desc=You have limited time to complete certain objectives.
-jcms.missiontag_killsrequired=Kills are Required
-jcms.missiontag_killsrequired_desc=Kills are required to progress this mission.
-jcms.missiontag_rarebosses=Rare Bosses
-jcms.missiontag_rarebosses_desc=You will encounter unique and extremely powerful boss entities during this mission.
-jcms.missiontag_naturalhazard=Natural Hazards
-jcms.missiontag_naturalhazard_desc=The environment can be harmful in this mission.
+jcms.missiontag_extraorders=额外战略配备
+jcms.missiontag_extraorders_desc=此任务有特别的战略配备,你可以在战略配备轮盘中看到.
+jcms.missiontag_hacking=需要入侵
+jcms.missiontag_hacking_desc=此任务中有需要入侵的终端.
+jcms.missiontag_infighting=内斗
+jcms.missiontag_infighting_desc=不同派系的敌人可能会互相攻击.
+jcms.missiontag_timer=时间限制
+jcms.missiontag_timer_desc=你在有限的时间内完成某些目标.
+jcms.missiontag_killsrequired=需要击杀
+jcms.missiontag_killsrequired_desc=此任务需要击杀才能完成.
+jcms.missiontag_rarebosses=稀有Boss
+jcms.missiontag_rarebosses_desc=此任务中,你可能会遇到一些稀有的Boss
+jcms.missiontag_naturalhazard=自然灾害
+jcms.missiontag_naturalhazard_desc=此任务中的环境可能有害.
 
-jcms.antlion=Antlions
-jcms.zombie=Zombies
-jcms.combine=The Combine
-jcms.everyone=Everyone
-jcms.rebel=Rebels
+jcms.antlion=蚁狮
+jcms.zombie=僵尸
+jcms.combine=联合军
+jcms.everyone=所有人
+jcms.rebel=反抗军
 
 jcms.solo=单人任务
 jcms.npcshud=NPCs:
@@ -179,7 +180,7 @@ jcms.evac_title2=NOT CHARGING
 jcms.evac_title3=CHARGING SLOWLY %d%%
 jcms.evac_text1=KEEP ENEMIES AWAY
 jcms.evac_text2=KILL ENEMIES FIRST
-jcms.userdead=USER IS DEAD
+jcms.userdead=用户已经寄了
 jcms.userdead_err=jcorp_error_usr_is_fckin_useless
 jcms.findweapon=J CORP URGES YOU TO FIND A WEAPON
 jcms.findweapon_err=jcorp_error_usr_is_useless
@@ -191,8 +192,8 @@ jcms.deadteammates_hud=SWEEPERS NEED A RESPAWN: x%d
 jcms.missionhud=任务:
 jcms.damagedealt=Damage: %d
 jcms.damagedealt_shield=Damage (shields): %d 
-jcms.ammohud=AMMO:
-jcms.enemieshud=ENEMIES:
+jcms.ammohud=弹药:
+jcms.enemieshud=敌人:
 jcms.strengthshud=STRENGTHS:
 jcms.weaknesseshud=WEAKNESSES:
 jcms.classhud=CLASS:
@@ -201,15 +202,15 @@ jcms.cooldown=CD %s
 jcms.restockammo=Restock Ammo
 jcms.chargepercent=Charge: %.1f%%
 jcms.spectating=Spectating
-jcms.exitdroppod=EXIT THE DROP POD
+jcms.exitdroppod=离开空投舱,按
 jcms.plystatus_dead=K.I.A.
 jcms.plystatus_evac=Evacuated
 jcms.plystatus_npc=NPCs
 jcms.plystatus_unknown=Unknown
 jcms.plyleft=(left)
 jcms.plynoweapons=Stunstick Only
-jcms.deploy=DEPLOY!
-jcms.toggleready=TOGGLE READY
+jcms.deploy=部署!
+jcms.toggleready=切换准备
 jcms.forcestart=(ADMIN) FORCE START
 jcms.leavelobby=GO BACK
 jcms.changeclass=Change Class
@@ -235,17 +236,17 @@ jcms.countdowntomission=Countdown to Mission
 jcms.missionbegins=Mission Begins
 jcms.loadedpods=LOADED PODS
 jcms.nodata=NO DATA
-jcms.selltheweapon=Sell the weapon
-jcms.buyxcount=Buy x%d
-jcms.sellxcount=Sell x%d
+jcms.selltheweapon=卖掉武器
+jcms.buyxcount=购买 x%d
+jcms.sellxcount=卖掉 x%d
 jcms.cashhud=CASH
 jcms.cashhud_old=OLD STARTING CASH
 jcms.cashhud_new=NEW STARTING CASH
 jcms.cashhud_none=No cash was lost or earned.
 jcms.costhud=COST
 jcms.orderscrolltip=Scrolling the MOUSE WHEEL will select other orders in a category.
-jcms.firstaidtip=Health Inside: %d
-jcms.restocktip=Ammo Inside
+jcms.firstaidtip=医疗剩余: %d
+jcms.restocktip=弹药剩余: %d
 jcms.umbrellatitle=JCorp Super-Colliding Super-Umbrella of Doom 9000 V3.152a
 jcms.pushtip=Press %s to Push
 
@@ -261,14 +262,14 @@ jcms.bottomline_defeat=You have failed and died. After respawning, you will be s
 jcms.bottomline_victory_npc=The Sweepers have succeeded in their mission. NPCs were left devastated, shocked, shot, exploded, dissolved, etc.
 jcms.bottomline_defeat_npc=The invasion has been stopped by the NPC forces this time, but the corporation will stop at nothing
 
-jcms.tutorialcomplete=TUTORIAL COMPLETE
-jcms.tutorialpost_title=TIME TO GET TO WORK, SWEEPER!
+jcms.tutorialcomplete=已完成教程
+jcms.tutorialpost_title=那么该开始工作了,清道夫!
 jcms.tutorialpost_desc1=There will be more toys for you to use on a real mission.
 jcms.tutorialpost_desc2=Remember: just do what comes natural. Now, get to it!
 jcms.tutorialpost_maps=LOOKING FOR MAPS TO SWEEP?
 jcms.tutorialpost_desc3=A map needs to have a NODEGRAPH and a NAVMESH to work.
 jcms.tutorialpost_desc4=They're hard to find, but we have a Steam collection ready for you:
-jcms.tutorialpost_disconnect=Return to Menu
+jcms.tutorialpost_disconnect=返回菜单
 
 jcms.ominoustext1== J 公司. 临时死亡报告 #UINT128_OVERFLOW =
 jcms.ominoustext2=Most recent corpus located
@@ -319,60 +320,60 @@ jcms.weaponcat3=Heavy Weapons
 jcms.weaponcat4=Explosives
 jcms.weaponcat5=Other
 
-jcms.stats=Statistics
-jcms.stats_filter=Class filter:
-jcms.stats_filter_total=All classes
-jcms.stats_playtime=Playtime
+jcms.stats=统计数据
+jcms.stats_filter=兵种过滤:
+jcms.stats_filter_total=全部兵种
+jcms.stats_playtime=游戏时间
 jcms.stats_playtime_ms=%dm %ds
 jcms.stats_playtime_hms=%dh %dm %ds
 jcms.stats_playtime_dhms=%dd %dh %dm %ds
-jcms.stats_kills=Kills
-jcms.stats_kills_direct=Direct
-jcms.stats_kills_defenses=Defenses
-jcms.stats_kills_explosions=Explosions
-jcms.stats_kills_sweepers=Player Kills
-jcms.stats_kills_turrets=Turrets Down
-jcms.stats_total=Total
-jcms.stats_missions=Missions
-jcms.stats_other=Other
-jcms.stats_missions_started=Started
-jcms.stats_missions_completed=Completed
-jcms.stats_missions_winrate=Win rate
-jcms.stats_deaths=Deaths
-jcms.stats_ffire=Friendly Kills
-jcms.stats_orders=Orders Used
-jcms.stats_hacks=Terminals Hacked
+jcms.stats_kills=击杀数
+jcms.stats_kills_direct=直接击杀
+jcms.stats_kills_defenses=防御击杀
+jcms.stats_kills_explosions=爆炸击杀
+jcms.stats_kills_sweepers=清道夫击杀
+jcms.stats_kills_turrets=炮塔击杀
+jcms.stats_total=总计
+jcms.stats_missions=任务
+jcms.stats_other=其他
+jcms.stats_missions_started=游玩数
+jcms.stats_missions_completed=完成数
+jcms.stats_missions_winrate=成功率
+jcms.stats_deaths=死亡数
+jcms.stats_ffire=友军击杀
+jcms.stats_orders=使用命令
+jcms.stats_hacks=入侵终端
 
-jcms.achievements=Achievements
-jcms.upcoming=TO BE ADDED
-jcms.as_sweeper=Sweepers
-jcms.as_npc=NPCs
-jcms.neverplayed=Didn't play
+jcms.achievements=成就
+jcms.upcoming=即将添加
+jcms.as_sweeper=清道夫
+jcms.as_npc=NPC
+jcms.neverplayed=未游玩
 
-jcms.plynotif0=PLAYER was killed.
-jcms.plynotif1=PLAYER was shot.
-jcms.plynotif2=PLAYER burned to death.
-jcms.plynotif3=PLAYER exploded.
-jcms.plynotif4=PLAYER drowned.
-jcms.plynotif5=PLAYER fell to death.
-jcms.plynotif6=PLAYER died in an accident.
-jcms.plynotif7=PLAYER was punished.
-jcms.plynotif8=PLAYER is now an NPC!
-jcms.plynotif9=PLAYER left the squad.
-jcms.plynotif10=PLAYER is joining you!
-jcms.plynotif11=PLAYER extracted!
-jcms.plynotif12=PLAYER died to radiation.
-jcms.plynotif13=PLAYER was crushed.
-jcms.plynotif14=PLAYER succumbed to toxins.
-jcms.plynotif15=PLAYER corroded in acid.
+jcms.plynotif0=PLAYER 被击杀.
+jcms.plynotif1=PLAYER 被射杀.
+jcms.plynotif2=PLAYER 被烧死.
+jcms.plynotif3=PLAYER 被炸死.
+jcms.plynotif4=PLAYER 被淹死.
+jcms.plynotif5=PLAYER 摔死了.
+jcms.plynotif6=PLAYER 意外死亡.
+jcms.plynotif7=PLAYER 受到惩罚.
+jcms.plynotif8=PLAYER 现在是NPC!
+jcms.plynotif9=PLAYER 离开了小队.
+jcms.plynotif10=PLAYER 正在加入你!
+jcms.plynotif11=PLAYER 被提取!
+jcms.plynotif12=PLAYER 死于辐射.
+jcms.plynotif13=PLAYER 被压扁了.
+jcms.plynotif14=PLAYER 死于毒素.
+jcms.plynotif15=PLAYER 被腐蚀.
 
 jcms.plynotif_alt1=PLAYER destroyed THING!
 jcms.plynotif_alt2=PLAYER captured THING!
 jcms.plynotif_alt3=PLAYER located THING!
 jcms.plynotif_alt4=PLAYER lost THING!
-jcms.plynotif_alt5=PLAYER marked THING!
-jcms.plynotif_alt6=PLAYER built THING!
-jcms.plynotif_alt7=PLAYER ordered THING!
+jcms.plynotif_alt5=PLAYER 标记 THING!
+jcms.plynotif_alt6=PLAYER 建造了 THING!
+jcms.plynotif_alt7=PLAYER 呼叫了 THING!
 
 jcms.hint_spawnmenu=Press Q to open the ORDER MENU
 jcms.hint_firstaid=FIRST AID DROPs can be ordered to heal yourself
@@ -429,9 +430,9 @@ jcms.terminal_gambling4=YOU MUST GAMBLE!
 jcms.terminal_inactive=INACTIVE
 jcms.terminal_weapons=武器
 jcms.terminal_buymoreguns=Buy more guns
-jcms.terminal_ammo=AMMO
-jcms.terminal_selweapon=SELECTED WEAPON
-jcms.terminal_ammoname=Ammo: %s
+jcms.terminal_ammo=弹药
+jcms.terminal_selweapon=手持武器
+jcms.terminal_ammoname=弹药: %s
 jcms.terminal_weaponinstruction=Switch your weapon to buy ammo for it or to sell it
 jcms.terminal_circuit_hint=找到并连接相同的数字
 jcms.terminal_find=FIND:
@@ -606,13 +607,13 @@ jcms.credits_testers=Closed Beta Testers
 jcms.credits_thanks=Special Thanks
 
 jcms.unlocklvl=Unlocked at LVL %d
-jcms.oursocialmedia=Follow us!
-jcms.ourgame=Check out our game (Discord)
+jcms.oursocialmedia=关注我们!
+jcms.ourgame=查看我们的游戏(Discord)
 jcms.othercontent=Extras
 jcms.codex=Codex
 jcms.bestiary=Bestiary
 jcms.extra_othermods=Our Other Addons
-jcms.extra_maps=Recommended Maps
+jcms.extra_maps=推荐地图
 jcms.extra_expansions=Map Sweepers Expansions
 jcms.extra_compatibles=Compatible Addons
 jcms.extra_legal1=Legal - Map Sweepers
