--- a/resource/localization/zh-CN/mapsweepers.properties
+++ b/resource/localization/zh-CN/mapsweepers.properties
@@ -37,6 +37,9 @@ jcms.select=选择
 jcms.selected=已选择
 jcms.favourites=收藏
 
+jcms.favourites=Favourites
+jcms.liability=LIABILITY
+
 jcms.objective=Objective
 jcms.flashpoint=Flashpoint
 jcms.thumper=Thumper
@@ -294,6 +297,9 @@ jcms.menututor_desc_sp2=我们为您准备了一个教程.
 jcms.menututor_desc_mp1=选择 Map Sweepers 游戏模式,
 jcms.menututor_desc_mp2=然后在单人模式下启动地图 'jcms_tutorial'.
 jcms.menututor_btn=游玩教程
+jcms.modal_joinasnpc_description1=Warning! NPC-team is not intended to be a fair fight!
+jcms.modal_joinasnpc_description2=If you're new, you should play Sweepers.
+jcms.modal_joinasnpc_warning=You will not be able to switch back once you deploy.
 
 jcms.sortby=Sort by
 jcms.sortmode_name=Name
@@ -433,8 +439,11 @@ jcms.terminal_buymoreguns=Buy more guns
 jcms.terminal_ammo=弹药
 jcms.terminal_selweapon=手持武器
 jcms.terminal_ammoname=弹药: %s
+jcms.error=错误
+jcms.terminal_nukesweeperspresent=MIN. %d SWEEPERS MUST BE PRESENT TO ARM
 jcms.terminal_weaponinstruction=Switch your weapon to buy ammo for it or to sell it
 jcms.terminal_circuit_hint=找到并连接相同的数字
+jcms.terminal_writethisdown=Write this down
 jcms.terminal_find=FIND:
 jcms.terminal_rcp=RAIL CONTROL POINT
 jcms.terminal_rail=RAIL:
