Update zh-CN #2

--- a/resource/localization/zh-CN/mapsweepers.properties
+++ b/resource/localization/zh-CN/mapsweepers.properties
@@ -25,7 +25,7 @@ jcms.class_sentinel_special=Bullet Sponge
 jcms.class_sentinel_desc=Incredibly strong shield, which you can charge by killing things.\nYou teleport away randomly when your shield is broken.\nReally slow, but sprint speed increases the longer you run for.
 
 jcms.class_engineer=工程师
--- Engineer Gaming(工程师游戏中)这个是TF2社区流行梗,所以无需翻译. 详细信息,请查看TF2 Wiki --
+-- Engineer Gaming(工程师游戏中)这个是TF2社区流行梗,所以无需翻译. 详细信息请查看TF2 Wiki --
 jcms.class_engineer_special=Engineer Gaming
 jcms.class_engineer_desc=You get a gravity gun to move turrets and objects around with.\nCheaper Orbitals & Explosives.\nLower cooldown on all call-ins.\nAll of your defences are empowered.
 
@@ -86,9 +86,9 @@ jcms.shelling=轨道轰炸
 jcms.shelling_desc=Orbital bombing affecting a big area for 1 minute
 jcms.mine_breach=突破冲锋(Breaching Charge)
 jcms.mine_breach_desc=Punches out locked doors. VERY STRONG knockback on anything else you attach this to
-jcms.turret_bolter=爆弹炮塔
+jcms.turret_bolter=Bolter Turret
 jcms.turret_bolter_desc=Slowly fires powerful and accurate bolts
-jcms.i_umbrella=雨伞
+jcms.i_umbrella="雨伞"
 jcms.i_umbrella_desc=Provides cover from the toxic rain
 jcms.ts_sapper=Sapper
 jcms.ts_sapper_desc=Slap this on a thumper and it'll slowly destroy it. Cheaper than C4, if you have time to spare
